fix overflow problem in header

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -124,7 +124,6 @@
 }
 
 .page .page-header {
-    width: 750px;
     margin-bottom: var(--space-3xl);
 }
 
